doc: add more instructions

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 # Websocket endpoint for your parachain.
 PARACHAIN_WS=
+# The number of decimals of your parachain's native token, e.g. 12.
+DECIMALS=
 # The runtime of your parachain before the change.
 RUNTIME_BEFORE=
 # The runtime of your parachain after the change.
